--- a/styles/style-nav.css
+++ b/styles/style-nav.css
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 250px;
+  width: 20%;
   height: 100vh;
   padding-top: 50px;
   background-color: #1d2126;
@@ -16,9 +16,10 @@
   celle si n'est pas soumit à la protection des droit d'auteur (car dans le domaine public)*/
   background-image: url(../images/145x52-atom-title.png);
   background-repeat: no-repeat ;
-  background-position : 50px 35px;
+  background-position : 50% 35px;
 }
 #nav-left ul {
+  padding-left: 10%;
   list-style-type: none;
 }
 #nav-left li {
@@ -33,7 +34,7 @@
 }
 
 #nav-left li ul {
-  padding-left: 20px;
+  padding-left: 17px;
   list-style-image: url(../images/icons/group.png)
 }
 #nav-left ul ul ul{
@@ -64,14 +65,18 @@
   margin-left: 5%;
   margin-bottom: 20px;
 }
+#nav-left .search:hover {
+  border: 1px solid #b5b7bc;
+  transition-delay: 0.1s;
+
+}
 #nav-left .search:focus {
-  margin-right: 0px;
   border: 1px solid #d19a66;
 
 }
 #nav-left button.submit {
-  width: 30px;
-  height: 30px;
+  width: 1.5rem;
+  height: 1.5rem;
   color: #b5b7bc;
   cursor: pointer;
   background: none;
