--- a/styles/style-nav.css
+++ b/styles/style-nav.css
@@ -1,15 +1,14 @@
 /* Navigation a gauche de l'ecran*/
 #nav-left {
   position: fixed;
+  display: flex;
+  flex-direction: column;
   top: 0;
   left: 0;
   width: 20%;
   height: 100vh;
   padding-top: 50px;
   background-color: #1d2126;
-  /* Flex box */
-  display: flex;
-  flex-direction: column;
   /* Image de fond */
   /* Conformement au condition d'utilisation de l'image d'écrite sur
   https://commons.wikimedia.org/w/index.php?title=File:Atom_editor_logo.svg&lang=fr&uselang=fr#Conditions_d%E2%80%99utilisation
@@ -19,6 +18,7 @@
   background-position : 50% 35px;
 }
 #nav-left ul {
+  flex-grow: 1;
   padding-left: 10%;
   list-style-type: none;
 }
@@ -93,7 +93,7 @@
 }
 
 #nav-left button.bottom {
-  margin: auto 5px;
+  margin: 150px 5px;
   font-size: 1.2rem;
   background-color: #21252b;
   border: 1px solid #282c34;
