--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -51,10 +51,12 @@ main {
   padding: 20px;
   margin: 180px 20% 0 20%;
   background-color: #282c34;
+  transition: margin-right 1s ease-in-out 0.07s;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1000px) {
   main {
     margin-right: 0;
+    transition: margin-right 1s ease-in-out 0.07s;
   }
 }
