--- a/styles/style-nav.css
+++ b/styles/style-nav.css
@@ -29,7 +29,7 @@
 #nav-left a {
   color: #d19a66;
 }
-#nav-left a:hover {
+#nav-left a:focus {
   color: #d1d3d7;
 }
 
@@ -108,6 +108,11 @@
   color: #e06c75;
 }
 
+@media (max-width: 666px) {
+  #nav-left {
+    background-image: url(../images/icons/atom-icon.png);
+  }
+}
 
 
 /* barre de navigation fléché à la fin du document*/
@@ -128,10 +133,4 @@
 #nav-bottom a:hover{
   margin: auto;
   font-size: 2.5rem;
-}
-
-@media (max-width: 666px) {
-  #nav-left {
-    background-image: url(../images/icons/atom-icon.png);
-  }
 }
