--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -6,6 +6,7 @@ html, body {
   height: 100%;
   width: : 100%;
   font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 
 body::-webkit-scrollbar {
