--- a/styles/style-nav.css
+++ b/styles/style-nav.css
@@ -13,9 +13,19 @@
   /* Conformement au condition d'utilisation de l'image d'écrite sur
   https://commons.wikimedia.org/w/index.php?title=File:Atom_editor_logo.svg&lang=fr&uselang=fr#Conditions_d%E2%80%99utilisation
   celle si n'est pas soumit à la protection des droit d'auteur (car dans le domaine public)*/
-  background-image: url(../images/145x52-atom-title.png);
+  background-image: url(../images/145x52/atom-title.png);
   background-repeat: no-repeat ;
   background-position : 50% 35px;
+}
+@media (max-width: 669px) {
+  #nav-left {
+    background-image: url(../images/145x52/atom-icon.png);
+  }
+  #nav-left form.bottom  {
+    flex-direction: column;
+  }
+  #nav-left form.bottom button {
+  }
 }
 #nav-left ul {
   flex-grow: 1;
@@ -28,6 +38,10 @@
 }
 #nav-left a {
   color: #d19a66;
+}
+#nav-left a:hover {
+  transition: 0.6s 0.02s;
+  color: #d1d3d7;
 }
 #nav-left a:focus {
   color: #d1d3d7;
@@ -52,7 +66,6 @@
 /* la page courante */
 #nav-left .selected {
   color: #b5b7bc;
-  pointer-events: none;
 }
 /* Barre de recherche*/
 
@@ -70,13 +83,14 @@
   width: 75%;
   border: 1px solid #282c34;
   color: #b5b7bc;
+  transition: 1.7s 0.07s;
 }
 #nav-left .search:hover {
+  transition: 1s 0.07s;
   border: 1px solid #b5b7bc;
-  transition-delay: 0.07s;
-
 }
 #nav-left .search:focus {
+  transition: 0.5s 0.02s;
   border: 1px solid #d19a66;
 
 }
@@ -90,30 +104,57 @@
 }
 #nav-left button.submit:hover {
   color: #d19a66;
+  transition: 1s 0.07s;
 }
-
-#nav-left button.bottom {
-  margin: 150px 5px;
+#nav-left button.submit:active {
+  color: #e06c75;
+}
+/* bottom button*/
+#nav-left form.bottom {
+  margin: 0 0 150px 0;
+  padding: 5px;
+  width: 100%-5px;
+  height: 6rem;
+  align-items: center;
+}
+#nav-left form.bottom button {
+  width: 100%;
+  height: 50%;
   font-size: 1.2rem;
+  line-height: 2.9rem;
+  background-color: #21252b;
+  border: 1px solid #282c34;
+  color: #d19a66;
+  transition: 1s;
+}
+#nav-left form.bottom button:hover {
+  transition: 1s 0.07s;
+  border: 1px solid #d19a66;
+}
+#nav-left form.bottom button:active {
+  border: 1px solid #e06c75;
+  color: #e06c75;
+}
+#nav-left form.bottom a{
+  display: block;
+  width: 100%;
+  height: 50%;
+  font-size: 1.2rem;
+  line-height: 3.2rem;
+  text-align: center;
   background-color: #21252b;
   border: 1px solid #282c34;
   color: #d19a66;
 }
-#nav-left button.bottom:hover {
-  transition-delay: 0.07s;
+
+#nav-left form.bottom a:hover {
+  transition: 1s 0.07s;
   border: 1px solid #d19a66;
 }
-#nav-left button.bottom:active {
+#nav-left form.bottom a:active {
   border: 1px solid #e06c75;
   color: #e06c75;
 }
-
-@media (max-width: 666px) {
-  #nav-left {
-    background-image: url(../images/icons/atom-icon.png);
-  }
-}
-
 
 /* barre de navigation fléché à la fin du document*/
 #nav-bottom {
