--- a/styles/style-header.css
+++ b/styles/style-header.css
@@ -1,11 +1,9 @@
 
 header {
-  position: absolute;
   top: 0;
   background-color: #21252b;
   padding: 0 20%;
   margin: 0;
-  height: 180px;
   width: 60%;
   transition: width 1s ease-in-out 0.07s;
 }
@@ -49,6 +47,7 @@ header li a {
   height: 100%;
   font-size: 18px;
   color: #b5b7bc;
+  border-bottom: 5px solid #282c34;
 }
 header li a:hover{
   transition-delay: 0.07s;
@@ -63,7 +62,8 @@ header li span {
   display: block;
   width: 0%;
   height: 2px;
-  margin: auto;
+  margin: 4px auto;
+  border-radius: 30px;
   transition: width 1s ease-out 0.07s;
   background-color: #d19a66;
 }
@@ -71,9 +71,18 @@ header li:hover span {
   width: 100%;
 }
 
+header span.line {
+  display: block;
+  background-color: #21252b;
+  width: 100%;
+  margin-top: 5px;
+  border-top: 5px solid #282c34;
+  height: 2px;
+}
 
 header .selected {
   background-color: #282c34;
+  box-shadow: 0 20px 0 #282c34;
   pointer-events: none;
 
   border-bottom: none;
