--- a/styles/style-nav.css
+++ b/styles/style-nav.css
@@ -71,36 +71,45 @@
 
 #nav-left form {
   display: flex;
+  height: 2rem;
   padding: 5px 5px;
-  margin-top: 70px;
-  margin-left: 5%;
-  margin-bottom: 20px;
+  margin: 70px 5% 20px 5%;
+  background-color: #21252b;
+  border: 1px solid #282c34;
+  border-radius: 30px;
+  transition: 1s 0.07s;
+  align-items: center;
+}
+#nav-left form:hover {
+  border: 1px solid #737478;
 }
 
 #nav-left .search {
   background-color: #21252b;
-  height: 1.5rem;
+  height: 100%;
   width: 75%;
-  border: 1px solid #282c34;
+  padding: 0;
+  margin: 0;
   color: #b5b7bc;
+  border: none;
   transition: 1.7s 0.07s;
-}
-#nav-left .search:hover {
-  transition: 1s 0.07s;
-  border: 1px solid #b5b7bc;
+  outline: none;
+  border-radius: 30px 0 0 30px;
+  /* de la meme couleur que le fond pour eviter d'etre decaler lors du focus*/
+  border: 1px solid #21252b;
 }
 #nav-left .search:focus {
-  transition: 0.5s 0.02s;
-  border: 1px solid #d19a66;
-
+  border: 1px solid #9c7c5e;
 }
 #nav-left button.submit {
   width: 1.5rem;
-  height: 1.5rem;
+  height: 100%;
+  margin-left: 5%;
   color: #b5b7bc;
   cursor: pointer;
   background: none;
   border: none;
+  outline: none;
 }
 #nav-left button.submit:hover {
   color: #d19a66;
@@ -108,6 +117,7 @@
 }
 #nav-left button.submit:active {
   color: #e06c75;
+  transition: 0s;
 }
 /* bottom button*/
 #nav-left form.bottom {
@@ -115,7 +125,9 @@
   padding: 5px;
   width: 100%-5px;
   height: 4rem;
-  align-items: center;
+  background: none;
+  border: none;
+  border-radius: 0;
 }
 #nav-left form.bottom button {
   width: 100%;
