--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -8,6 +8,10 @@ html, body {
   font-family: Arial, Helvetica, sans-serif;
   scroll-behavior: smooth;
 }
+body {
+  /* On le mets uniquement dans body pour ne pas casser l'evennement javascript onScroll.*/
+  overflow-x: hidden;
+}
 
 body::-webkit-scrollbar {
   width: 1rem;
@@ -30,18 +34,22 @@ h3 {
   margin-left: 3rem;
 }
 p {
-  margin-left: 4rem;
+  margin: 1rem 4rem;
   text-indent: 2rem;
 }
 main ul {
-  margin-left: 5rem;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+main ul ul{
+  margin-left: 1rem;
 }
 main li {
   font-style: italic;
   margin-bottom: 1rem;
 }
 main ul p {
-  margin-top: 0rem;
+  margin-top: 0;
   font-style: normal;
   margin-left: 0;
   text-indent: 1rem;
@@ -52,7 +60,9 @@ a {
   cursor: pointer;
 }
 a:hover {
-  color: #93b8c9;
+  color: #d1d3d7;
+  text-decoration: underline;
+  transition: 0.3s;
 }
 a:active {
   color: #e06c75;
@@ -71,9 +81,10 @@ button {
   overflow: hidden;
 }
 main {
-  padding: 20px;
+  position: relative;
+  padding: 20px 20px 200px 20px;
   margin: 0 20% 0 20%;
-  min-height: 70vh;
+  min-height: 50vh;
   background-color: #282c34;
 
   transition: margin-right 1s ease-in-out 0.07s;
