--- a/styles/style-nav.css
+++ b/styles/style-nav.css
@@ -38,6 +38,7 @@
 }
 #nav-left a {
   color: #d19a66;
+  text-decoration: none;
 }
 #nav-left a:hover {
   transition: 0.6s 0.02s;
@@ -170,13 +171,13 @@
 
 /* barre de navigation fléché à la fin du document*/
 #nav-bottom {
-  position: relative;
+  position: absolute;
   display: flex;
+  bottom: 20px;
   padding: 0px;
-  margin: 0px;
+  margin: 0;
   width: 100%;
   height: 50px;
-  background-color: #282c34;
 }
 
 #nav-bottom a{
@@ -184,6 +185,10 @@
   color: #93b8c9;
   font-size: 2rem;
   transition: 0.4s 0.07s;
+}
+#nav-bottom a.max {
+  color: #5b5f62;
+  pointer-events: none;
 }
 #nav-bottom a:hover{
   margin: auto;
