--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -77,6 +77,7 @@ button {
   display: flex;
   background-color: #323232;
   width: 100%;
+  height: 100%;
   margin: auto;
   padding: 0px;
   overflow: hidden;
