--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -51,10 +51,16 @@ main li {
 }
 main ul p {
   margin-top: 0;
+  margin-bottom: 0.5rem;
   font-style: normal;
   margin-left: 0;
   text-indent: 1rem;
 }
+
+footer {
+  margin-top: 10%;
+}
+
 a {
   color: #d19a66;
   text-decoration: none;
