--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -4,7 +4,7 @@ html, body {
   margin: 0px;
   padding: 0px;
   height: 100%;
-  width: : 100%;
+  width: 100%;
   font-family: Arial, Helvetica, sans-serif;
   scroll-behavior: smooth;
   text-align: justify;
