--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -83,9 +83,9 @@ button {
   display: flex;
   background-color: #323232;
   width: 100%;
-  height: 100%;
-  margin: auto;
-  padding: 0px;
+  height: 200px;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
 }
 main {
