--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -57,6 +57,7 @@ main ul p {
   text-indent: 1rem;
 }
 footer {
+  text-align: center;
     background-color: #4b390f;
     margin: 10% 50px;
     padding: 0.1rem 0;
@@ -109,9 +110,11 @@ main {
 aside {
   background-color: #0d4545;
   margin: 0 50px;
-  padding: 0.1rem 0;
+  padding: 10px 0;
   border-radius: 10px;
 }
 aside a {
+  display: block;
   color: #d1d3d7;
+  text-align: center;
 }
